--- a/style.css/style.css
+++ b/style.css/style.css
@@ -71,7 +71,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    height: 85px;
+    height: 80px;
     background-color: white;
     position: sticky;
     top: 0%;
@@ -87,13 +87,505 @@ body {
     justify-content: start;
     align-items: center;
     width: 75%;
-    height: 85px;
+    height: 80px;
+    position: relative;
 }
-.logo-left > p {
+.Logo-text {
     font-size: 16px;
     margin: 0px 16px;
     color: #77777f;
 }
+
+.Contact-us-div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.Contact-us-hover {
+    position: absolute;
+    display: none;
+    width: 210px;
+    height: 130px;
+    background-color: white;
+    top: 70px;
+    left: 630px;
+    border-radius: 5px;
+    border: 0.1px solid #c9c9c9;
+}
+.Contact-us-div .down-arrow {
+    position: absolute;
+    display: none;
+    width: 15px;
+    height: 15px;
+    top: 48px;
+    left: 735px;
+}
+.Contact-us-div:hover .down-arrow {
+    display: block;
+}
+.Contact-us-hover ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 200px;
+}
+.Contact-us-hover  ul > li a {
+    display: flex;
+    width: auto;
+    font-size: 16px;
+    padding: 12px 21px;
+    color: #171321;
+    text-decoration: none;
+}
+.Contact-us-hover  ul > li {
+    display: flex;
+    width: auto;
+}
+.Contact-us-div:hover {
+    height: 80px;
+}
+.Contact-us-div:hover p {
+    color: #171321;
+}
+.Contact-us-div:hover > .Contact-us-hover {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: start;
+}
+.Contact-us-hover ul > li a:hover {
+    color: #9b7fd4;
+}
+
+
+
+.Company-div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.Company-hover {
+    position: absolute;
+    display: none;
+    width: 220px;
+    height: 440px;
+    background-color: white;
+    padding: 25px 0px;
+    top: 70px;
+    left: 525px;
+    border-radius: 5px;
+    border: 0.1px solid #c9c9c9;
+    box-sizing: border-box;
+}
+.Company-div .down-arrow {
+    position: absolute;
+    display: none;
+    width: 15px;
+    height: 15px;
+    top: 48px;
+    left: 625px;
+}
+.Company-div:hover .down-arrow {
+    display: block;
+}
+.Company-hover ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 200px;
+}
+.Company-hover  ul > li a {
+    display: flex;
+    width: auto;
+    font-size: 16px;
+    padding: 10px 22px;
+    color: #171321;
+    text-decoration: none;
+}
+.Company-hover  ul > li {
+    display: flex;
+    width: auto;
+}
+.Company-div:hover {
+    height: 80px;
+}
+.Company-div:hover p {
+    color: #171321;
+}
+.Company-div:hover > .Company-hover {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: start;
+}
+.Company-hover ul > li a:hover {
+    color: #9b7fd4;
+}
+
+
+.Solutions-div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.Solutions-hover {
+    position: absolute;
+    display: none;
+    width: 870px;
+    height: 470px;
+    background-color: white;
+    top: 70px;
+    left: 295px;
+    border-radius: 5px;
+    border: 0.1px solid #c9c9c9;
+}
+.Solutions-menu {
+    display: flex;
+    flex-flow: row wrap;
+    width: 870px;
+    height: 470px;
+}
+.View-All {
+    margin: -10px 22px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 600;
+    width: 170px;
+}
+.right-arrow-2 {
+    width: 15px;
+    height: 15px;
+    transform: translateY(2px);
+}
+.View-All:hover .right-arrow-2 {
+    transform: translateY(2px) translateX(7px);
+}
+.S-menu {
+    display: flex;
+    flex-flow: column wrap;
+}
+.menu-1 {
+    height: 380px;
+}
+.child {
+    padding-top: 22px;
+}
+.child li:nth-child(1) a {
+    font-size: 17px;
+    font-weight: 600;
+    color: #9b7fd4;
+}
+.Solutions-menu .S-menu {
+    width: 68%;
+    height: 100%;
+}
+.Solutions-menu .Side-Bar {
+    width: 32%;
+    height: 100%;
+}
+.Solutions-div .down-arrow {
+    position: absolute;
+    display: none;
+    width: 15px;
+    height: 15px;
+    top: 48px;
+    left: 330px;
+}
+.Solutions-div:hover .down-arrow {
+    display: block;
+}
+.S-menu ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 300px;
+}
+.S-menu ul > li a {
+    display: flex;
+    width: auto;
+    font-size: 16px;
+    padding: 10px 21px;
+    max-width: 300px;
+    color: #171321;
+    text-decoration: none;
+}
+.S-menu ul > li {
+    display: flex;
+    width: auto;
+}
+.Solutions-div:hover {
+    height: 80px;
+}
+.Solutions-div:hover #Solutions {
+    color: #171321;
+}
+.Solutions-div:hover > .Solutions-hover {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: start;
+}
+.S-menu ul > li a:hover {
+    color: #9b7fd4;
+}
+.Side-Bar {
+    display: flex;
+    flex-flow: column wrap;
+
+}
+.Side-Bar-1 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    padding-left: 25px;
+    height: 45%;
+    width: 100%;
+    background-color: #f6f3fe;
+    box-sizing: border-box;
+}
+.Side-Bar-2 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    padding-left: 25px;
+    padding-top: 30px;
+    height: 55%;
+    width: 100%;
+    background-color: #f6f3fe;
+    box-sizing: border-box;
+}
+.Side-Bar .text-child-1 {
+    /* font-size: 16px; */
+    font-weight: 600;
+}
+.Side-Bar-1 .text-child-1 {
+    transform: translateY(-10px);
+}
+.Side-Bar-1 .text-child-2 {
+    transform: translateY(-10px);
+}
+.Side-Bar-text-1 {
+    height: 100px;
+}
+.Side-Bar-text-2 {
+    height: 200px;
+}
+.Side-Bar-logo-1 {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 0px 0px;
+}
+.Side-Bar-logo-2 {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 11px 0px;
+}
+.Side-Bar ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 300px;
+}
+.Side-Bar ul > li a {
+    display: block;
+    font-size: 14px;
+    padding: 12px 0px;
+    max-width: 250px;
+    color: #171321;
+    text-decoration: none;
+}
+.Side-Bar .text-child-2 {
+    padding-top: 0px;
+}
+.right-arrow-3 {
+    width: 10px;
+    height: 10px;
+    transform: translateX(2px);
+}
+.Side-Bar-logo-1:hover .right-arrow-3 {
+    transform: translateX(7px);
+}
+.Side-Bar-logo-2:hover .right-arrow-3 {
+    transform: translateX(7px);
+}
+.Side-Bar-1:hover {
+    background-color: #e3d7ff;
+}
+.Side-Bar-2:hover {
+    background-color: #e3d7ff;
+}
+
+
+.Resources-div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.Resources-hover {
+    position: absolute;
+    display: none;
+    width: 1000px;
+    height: 370px;
+    background-color: white;
+    top: 70px;
+    left: 295px;
+    border-radius: 5px;
+    border: 0.1px solid #c9c9c9;
+}
+.Resources-menu {
+    display: flex;
+    flex-flow: row wrap;
+    width: 1000px;
+    height: 370px;
+}
+.View-All-1 {
+    margin: -10px 22px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 600;
+    width: 170px;
+}
+.right-arrow-2 {
+    width: 15px;
+    height: 15px;
+    transform: translateY(2px);
+}
+.View-All-1:hover .right-arrow-2 {
+    transform: translateY(2px) translateX(7px);
+}
+.R-menu {
+    display: flex;
+    flex-flow: column wrap;
+}
+.Resources-hover-1 .menu-1 {
+    height: 280px;
+    box-sizing: border-box;
+}
+.child-0 {
+    width: 210px;
+    padding: 0px 4px;
+    padding-top: 20px;
+}
+.View-All-1.child-0 {
+    margin-right: 0px;
+}
+.child-0 li:nth-child(1) a {
+    font-size: 17px;
+    font-weight: 600;
+    color: #9b7fd4;
+}
+.Resources-menu .R-menu {
+    width: 71%;
+    height: 100%;
+}
+.Resources-menu .Side-Bar-3-0 {
+    width: 29%;
+    height: 100%;
+}
+.Resources-div .down-arrow {
+    position: absolute;
+    display: none;
+    width: 15px;
+    height: 15px;
+    top: 48px;
+    left: 520px;
+}
+.Resources-div:hover .down-arrow {
+    display: block;
+}
+.R-menu ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 280px;
+}
+.R-menu ul > li a {
+    display: flex;
+    width: auto;
+    font-size: 16px;
+    padding: 10px 21px;
+    max-width: 300px;
+    color: #171321;
+    text-decoration: none;
+}
+.R-menu ul > li {
+    display: flex;
+    width: auto;
+}
+.Resources-div:hover {
+    height: 80px;
+}
+.Resources-div:hover #Resources {
+    color: #171321;
+}
+.Resources-div:hover > .Resources-hover {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: start;
+}
+.R-menu ul > li a:hover {
+    color: #9b7fd4;
+}
+.Resources-img {
+    width: 92%;
+    height: 155px;
+}
+.Side-Bar {
+    display: flex;
+    flex-flow: column wrap;
+}
+.Side-Bar-3 {
+    padding-left: 25px;
+    height: 100%;
+    width: 100%;
+    background-color: #f6f3fe;
+    box-sizing: border-box;
+}
+.Side-Bar-text-3 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    height: 95%;
+    width: 100%;
+}
+.Side-Bar-text-3 p:nth-child(1) {
+    font-size: 15px;
+    font-weight: 600;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+.Side-Bar-text-3 p:nth-child(3) {
+    font-size: 19px;
+    font-weight: 600;
+    height: 60px;
+    width: 220px;
+}
+.Take-The-Assessment {
+    font-size: 17px;
+    font-weight: 600;
+    padding: 0px 0px;
+}
+.right-arrow-4 {
+    width: 15px;
+    height: 15px;
+    transform: translateY(2px) translateX(2px);
+}
+.Take-The-Assessment:hover .right-arrow-4 {
+    transform: translateY(2px)  translateX(9px);
+}
+.Side-Bar-3:hover {
+    background-color: #e3d7ff;
+}
+
+
+
+
 .logo-right {
     display: flex;
     flex-flow: row wrap;
