--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -206,3 +206,76 @@ body {
     width: 520px;
     height: 440px;
 }
+
+.body-4 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 260px;
+    margin-bottom: 60px;
+}
+.body-4-div {
+    display: flex;
+    flex-flow: row wrap;
+    width: 1160px;
+    height: 100%;
+}
+.body-4-child {
+    display: flex;
+    flex-flow: column wrap;
+    height: 65%;
+    width: 24%;
+    padding-top: 50px;
+}
+.body-4-text {
+    display: flex;
+    flex-flow: column wrap;
+}
+.body-4-text-div {
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 260px;
+}
+.body-4-text > h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.body-4-text-div > p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 5px;
+    font-size: 16px;
+}
+.body-4-text-div p > a {
+    text-decoration: none;
+    color: #9b7fd4;
+}
+.body-4-text-div a:hover {
+    text-decoration: underline;
+}
+.body-4-child-2 {
+    height: 86%;
+}
+.body-4-text-2 > h3 {
+    max-width: 200px;
+}
+.body-4-logo-1 {
+    width: 35px;
+    height: 35px;
+    /* transform: translateY( 10px ); */
+}
+.body-4-logo-2 {
+    width: 35px;
+    height: 35px;
+}
+.body-4-logo-3 {
+    width: 35px;
+    height: 35px;
+}
+.body-4-logo-4 {
+    width: 35px;
+    height: 35px;
+}
