--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     flex-flow: column wrap;
     width: 100%;
-    height: 300vh;
+    height: 500vh;
 }
 .footer-gradient{
     position: absolute;
@@ -80,12 +80,14 @@ body {
     width: 100px;
     height: 22px;
     padding-right: 100px;
+    filter: grayscale(100%);
 
 }
 #body-2-logo-4{
     width: 190px;
     height: 28px;
     padding-right: 30px;
+    filter: grayscale(100%);
 }
 #body-2-logo-5{
     width: 110px;
@@ -115,6 +117,7 @@ body {
 .body-3-div {
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-between;
     width: 1160px;
     height: 100%;
 }
@@ -123,7 +126,7 @@ body {
     flex-flow: column wrap;
     justify-content: end;
     height: 80%;
-    width: 640px;
+    width: 530px;
 }
 .body-3-text  h3 {
     font-size: 40px;
@@ -226,7 +229,7 @@ body {
     display: flex;
     flex-flow: column wrap;
     height: 65%;
-    width: 24%;
+    width: 25%;
     padding-top: 50px;
 }
 .body-4-text {
@@ -263,19 +266,583 @@ body {
     max-width: 200px;
 }
 .body-4-logo-1 {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     /* transform: translateY( 10px ); */
 }
 .body-4-logo-2 {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
 }
 .body-4-logo-3 {
+    width: 30px;
+    height: 30px;
+}
+.body-4-logo-4 {
+    width: 30px;
+    height: 30px;
+}
+.body-5 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding-top: 10px;
+    width: 100%;
+    height: 470px;
+    position: relative;
+}
+.body-5-div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 1160px;
+    height: 100%;
+}
+.body-5-right {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    height: 80%;
+    width: 51%;
+    background-color: #f6f3fe;
+    border-radius: 8px 0px 0px 8px;
+    box-sizing: border-box;
+}
+.body-5-left {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    height: 80%;
+    width: 47.5%;
+}
+.body-5-right-1 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    height: 75%;
+    width: 100%;
+    padding-left: 30px;
+}
+.body-5-right-1 svg {
+    width: 31px;
+    height: 31px;
+    margin-top: 10px;
+}
+.body-5-right-1 > h3 {
+    font-size: 24px;
+    font-weight: 600;
+    max-width: 520px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+.body-5-right-1 h3 > a {
+    text-decoration: none;
+    color: #7759c2;
+}
+.body-5-right-1 h3 > a:hover {
+    text-decoration: underline;
+
+}
+.body-5-div-child {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    width: 428px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: white;
+}
+.body-5-div-child > svg {
+    height: 25px;
+    width: 25px;
+    margin-top: 0px;
+    margin-left: 10px;
+}
+.body-5-div-child > p {
+    margin: 0px;
+    margin-left: 10px;
+    font-weight: 600;
+    font-size: 15px;
+}
+.body-5-div-child > h3 {
+    margin: 0px;
+    margin-left: 10px;
+    font-size: 25px;
+}
+.body-5-right-2 {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    height: 25%;
+    width: 100%;
+    padding-left: 30px;
+}
+.body-5-right-2 a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+}
+.body-5-right-2:hover a {
+    text-decoration: underline;
+}
+.right-arrow-5-right {
+    width: 20px;
+    height: 20px;
+    transition: 0.2s linear;
+}
+.body-5-right-2:hover .right-arrow-5-right {
+    text-decoration: underline;
+    transform: translate(7px);
+}
+.body-5-child {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    width: 98%;
+    height: 48%;
+    background-color: #f6f3fe;
+    border-radius: 0px 8px 0px 0px;
+    padding-left: 30px;
+}
+.body-5-child-2 {
+    border-radius: 0px 0px 100px 0px;
+}
+.body-5-child svg:nth-child(1) {
+    width: 31px;
+    height: 31px;
+}
+.body-5-child h3 {
+    font-size: 120%;
+    font-weight: bold;
+    margin-top: 15px;
+}
+.body-5-child-link {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    width: 100%;
+}
+.body-5-child-link a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+}
+.body-5-child-link:hover a {
+    text-decoration: underline;
+}
+.body-5-child-link:hover .right-arrow-5-right {
+    text-decoration: underline;
+    transform: translate(7px);
+}
+.body-5-footer {
+    position: absolute;
+    bottom: 0.5%;
+    width: 100%;
+    height: 28%;
+    background-color:#171321 ;
+    z-index: -1;
+}
+.body-6 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding-top: 10px;
+    width: 100%;
+    height: 995px;
+    background-color:#171321 ;
+    margin-bottom: 60px;
+    /* position: relative; */
+}
+.body-6-div {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    width: 1160px;
+    height: 100%;
+}
+.DevSecOps {
+    font-size: 30px;
+    background: linear-gradient( to right, #df9e76, #c894a5, #9573e7);
+    background-clip: text;
+    color: transparent;
+    width: 170px;
+    height: 35px;
+    margin: 0px 0px 20px 0px;
+}
+.body-6-h2 {
+    font-size: 50px;
+    color: white;
+    width: 800px;
+    margin: 0px 0px 30px 0px;
+}
+.body-6-div-child {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 49%;
+    margin: 30px 0px 35px 0px;
+}
+.body-6-div-child .child-1 {
+    font-size: 24px;
+    font-weight: 600;
+    width: 205px;
+    text-align: center;
+    height: 45px;
+    border-style: none;
+    border-radius: 30px;
+    color: white;
+    background-color: #7759c2;
+}
+.body-6-div-child .child-2 {
+    font-size: 24px;
+    font-weight: 600;
+    width: 150px;
+    text-align: center;
+    height: 45px;
+    border-style: none;
+    border-radius: 30px;
+    color: white;
+    background-color: #45424d;
+    transition: 0.2s linear;
+}
+.body-6-div-child .child-2:hover {
+    font-size: 24px;
+    font-weight: 600;
+    width: 150px;
+    text-align: center;
+    height: 45px;
+    border-style: none;
+    border-radius: 30px;
+    color: white;
+    background-color: #7759c2;
+}
+.body-6-div-child .child-3 {
+    font-size: 24px;
+    font-weight: 600;
+    width: 180px;
+    text-align: center;
+    height: 45px;
+    border-style: none;
+    border-radius: 30px;
+    color: white;
+    background-color: #45424d;
+    transition: 0.2s linear;
+}
+.body-6-div-child .child-3:hover {
+    font-size: 24px;
+    font-weight: 600;
+    width: 180px;
+    text-align: center;
+    height: 45px;
+    border-style: none;
+    border-radius: 30px;
+    color: white;
+    background-color: #7759c2;
+}
+.body-6-text {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    height: 530px;
+}
+.body-6-left {
+    display: flex;
+    flex-flow: column wrap;
+    width: 53%;
+    height: 500px;
+    margin: 10px 0px;
+}
+.body-6-left > p {
+    max-width: 550px;
+    font-size: 24px;
+    /* font-weight: 600; */
+    color: white;
+}
+.body-6-list {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    height: 260px;
+    margin: 30px 0px;
+}
+.body-6-list > li {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+.body-6-list li > svg:nth-child(1) {
+    width: 30px;
+    height: 30px;
+    color: #a88bec;
+}
+.body-6-a {
+    width: auto;
+}
+.body-6-a > a {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0px 1px 0px 15px;
+    color: white;
+}
+.body-6-a > svg {
+    color: white;
+    fill: currentColor;
+    transition: 0.15s linear;
+}
+.body-6-a-1:hover .body-6-logo-1 {
+    transform: translateX(10px);
+}
+.body-6-a-2:hover .body-6-logo-2 {
+    transform: translateX(10px);
+}
+.body-6-a-3:hover .body-6-logo-3 {
+    transform: translateX(10px);
+}
+.body-6-a-4:hover .body-6-logo-4 {
+    transform: translateX(10px);
+}
+.body-6-right {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: end;
+    width: 47%;
+    height: 540px;
+    /* position: relative; */
+}
+.body-6-right img {
+    width: 560px;
+    height: 490px;
+    /* position: absolute;
+    top: 10%; */
+}
+.body-7 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 580px;
+}
+.body-7-div {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    width: 1160px;
+    height: 100%;
+}
+.body-7-head {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 1160px;
+    height: 115px;
+    position: relative;
+}
+.body-7-logo-1 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: end;
+    width: 170px;
+    height: 90px;
+}
+.body-7-logo-1 > img {
+    width: 100%;
+    height: 50%;
+}
+.body-7-logo-2 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: end;
+    width: 170px;
+    height: 90px;
+    margin-left: 70px;
+}
+.body-7-logo-2 > img {
+    width: 100%;
+    height: 30%;
+}
+.body-7-logo-3 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: end;
+    width: 170px;
+    height: 90px;
+    margin-left: 20px;
+    box-sizing: border-box;
+}
+.body-7-logo-3 > img {
+    width: 25%;
+    height: 45%;
+}
+.body-7-logo-4 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: end;
+    width: 170px;
+    height: 90px;
+}
+.body-7-logo-4 > img {
+    width: 100%;
+    height: 50%;
+}
+.body-7-logo-5 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: end;
+    width: 170px;
+    height: 90px;
+}
+.body-7-logo-5 > img {
+    width: 100%;
+    height: 50%;
+}
+.body-7-head::after {
+    content: '';
+    width: 100%;
+    height: 5px;
+    background-color: #f2f1f5;
+    margin-top: 30px;
+}
+.body-7-logo-1::after {
+    content: '';
+    width: 190px;
+    height: 5px;
+    background-color: #7759c2 ;
+    bottom: -10px;
+    left: -10px;  
+    margin-top: 30px;
+    position: absolute;
+    z-index: 3;
+}
+.body-7-footer {
+    display: flex;
+    flex-flow: column wrap;
+    width: 1160px;
+    height: 70%;
+}
+.body-7-left {
+    display: flex;
+    flex-flow: column wrap;
+    width: 50%;
+    height: 100%;
+}
+.body-7-left-1 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    width: 100%;
+    height: 70%;
+}
+.body-7-left-1 > h3 {
+    font-size: 40px;
+    margin: 10px 0px;
+}
+.body-7-left-1 h3 > a {
+    font-size: 40px;
+    text-decoration: none;
+    color: #7759c2;
+}
+.body-7-left-1 h3:hover a {
+    font-size: 40px;
+    text-decoration: underline;
+    color: #7759c2;
+}
+.body-7-div-child {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    width: 81%;
+    height: 20%;
+    border-radius: 50px;
+    background-color:  #f6f3fe;
+}
+.body-7-div-child > p {
+    margin: 0px;
+    margin-left: 10px;
+    font-weight: 600;
+    font-size: 91%;
+}
+.body-7-div-child > h3 {
+    margin: 0px;
+    margin-left: 25px;
+    font-size: 200%;
+}
+.body-7-left-2 {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    height: 25%;
+    width: 100%;
+}
+.body-7-left-2 a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+}
+.body-7-left-2:hover a {
+    text-decoration: underline;
+}
+.right-arrow-7-right {
+    width: 20px;
+    height: 20px;
+    transition: 0.2s linear;
+}
+.body-7-left-2:hover .right-arrow-7-right {
+    text-decoration: underline;
+    transform: translate(7px);
+}
+.body-7-right {
+    display: flex;
+    flex-flow: column wrap;
+    width: 44%;
+    height: 100%;
+    margin-top: 10px;
+    position: relative;
+}
+.body-7-text {
+    display: flex;
+    flex-flow: column wrap;
+    /* justify-content: space-between; */
+    width: 90%;
+    height: 65%;
+    padding: 40px 20px 20px 50px;
+    border-radius: 10px 10px 30px 10px;
+    background-color:#f6f3fe;
+}
+.body-7-text-1 > svg {
     width: 35px;
     height: 35px;
 }
-.body-4-logo-4 {
-    width: 35px;
-    height: 35px;
+.body-7-text-1 > p {
+    max-width: 430px;
+    font-size: 20px;
+    margin: 0px 0px;
+    margin-bottom: 30px;
+}
+.body-7-text-2 > p {
+    max-width: 400px;
+    font-size: 15px;
+    margin: 0px 0px;
+}
+.body-7-text-2  p:nth-child(1) {
+    font-weight: 600;
+}
+.body-7-img > img {
+    width: 160px;
+    height: 160px;
+    bottom: 45px;
+    right: -60px;
+    position: absolute;
 }
