--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -33,9 +33,200 @@ body {
     margin-bottom: 30px;
 }
 .body-1 {
+    display: block;
     width: 100%;
-    height: 580px;
+    height: 600px;
     margin-bottom: 60px;
+    overflow: hidden;
+}
+.body-1-div {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 1800px;
+    height: 100%;
+    /* overflow: hidden; */
+}
+.div-1-child img {
+    /* width: 430px;
+    height: 250px; */
+    width: 100%;
+    height: 55%;
+}
+.div-1-child-1 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    margin-left: -30px;
+    width: 25%;
+    height: 70%;
+    animation: div-move 1.2s linear 8s;
+}
+.div-1-child-1 h1 {
+    font-size: 50px;
+    margin: 0px 0px;
+}
+.div-1-child-1 p {
+    font-size: 20px;
+    margin: 20px 0px 40px 0px;
+}
+.div-1-child-1 button {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 45px;
+    font-size: 18px;
+    border-radius: 8px;
+    color: white;
+    background-color: #171321;
+    transition: 0.2s linear;
+}
+.div-1-child-1 button:hover {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 45px;
+    font-size: 18px;
+    border-radius: 8px;
+    color: #171321;
+    border: 1px solid #171321;
+    background-color: white;
+}
+.div-1-child-2 {
+    display: flex;
+    flex-flow: column wrap;
+    width: 25%;
+    padding: 25px 25px;
+    background-color: #f4effc;
+    margin-top: 50px;
+    margin-left: 60px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    transition: 0.2s linear;
+    animation: div-move 1.2s linear 8s;
+}
+.div-1-child-2-head {
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+    height: 90%;
+}
+.div-1-child-2-head button {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 35px;
+    font-size: 16px;
+    border-radius: 30px;
+    color: white;
+    border: none;
+    background-color: #7759c2;
+    margin: 30px 0px 10px 0px;
+}
+.div-1-child-2-head h2 {
+    font-size: 23px;
+    max-width: 450px;
+    margin: 0px;
+}
+.div-1-child-2-footer {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    width: 100%;
+    height: 10%;
+}
+.right-arrow-1-right {
+    width: 25px;
+    height: 25px;
+    transition: 0.2s linear;
+    transform: translateX(4px);
+}
+.body-1-right {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    width: 100%;
+}
+.body-1-right a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+}
+.div-1-child-2:hover a {
+    text-decoration: underline;
+}
+.div-1-child-2:hover .right-arrow-1-right {
+    text-decoration: underline;
+    transform: translateX(12px);
+}
+.div-1-child-2:hover {
+    transform: translateY(-10px);
+}
+.div-1-child-3 {
+    display: flex;
+    flex-flow: column wrap;
+    width: 25%;
+    padding: 25px 25px;
+    background-color: #f4effc;
+    margin-left: 40px;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    transition: 0.2s linear;
+    animation: div-move 1.2s linear 8s;
+}
+.div-1-child-3-head {
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+    height: 90%;
+}
+.div-1-child-3-head h2 {
+    font-size: 23px;
+    max-width: 450px;
+    margin-top: 50px;
+}
+.div-1-child-3-footer {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    width: 100%;
+    height: 10%;
+}
+.right-arrow-1-right {
+    width: 25px;
+    height: 25px;
+    transition: 0.2s linear;
+    transform: translateX(4px);
+}
+.body-3-right {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    width: 100%;
+}
+.body-3-right a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+}
+.div-1-child-3:hover a {
+    text-decoration: underline;
+}
+.div-1-child-3:hover .right-arrow-1-right {
+    text-decoration: underline;
+    transform: translateX(12px);
+}
+.div-1-child-3:hover {
+    transform: translateY(-10px);
 }
 .body-2 {
     display: flex;
@@ -1157,7 +1348,7 @@ body {
     transition: 0.2s linear;
     color: white;
     fill: currentColor;
-    transform: translateX(8px);
+    transform: translateX(4px);
 }
 .body-9-child-link {
     display: flex;
@@ -1176,7 +1367,7 @@ body {
 }
 .body-9-child-link:hover .right-arrow-9-right {
     text-decoration: underline;
-    transform: translateX(8px);
+    transform: translateX(12px);
 }
 footer {
     display: flex;
@@ -1332,4 +1523,15 @@ footer {
 .footer-end-2-end > a {
     color: white;
     margin-right: 30px;
+}
+@keyframes div-move {
+    0% {
+        transform: translateX(0px);
+    }
+    50% {
+        transform: translateX(-20px);
+    }
+    100% {
+        transform: translateX(0px);
+    }
 }
