--- a/style.css/style.css
+++ b/style.css/style.css
@@ -4,8 +4,7 @@
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 53px;
+    height: 52px;
     justify-content: center;
     background-color: #171321;
 }
@@ -24,7 +23,7 @@
     align-items: center;
 }
 #learnmore {
-    color: white !important;
+    color: white;
     font-size: 18px;
     margin-right: 5px;
 }
@@ -566,14 +565,23 @@
     width: 25%;
     height: 85px;
 }
+.logo-right svg:nth-child(1) {
+    display: none;
+} 
+.logo-right svg:nth-child(3) {
+    display: none;
+} 
 .KinhLup {
     width: 15px;
     height: 15px;
     margin-right: 33px;
 }
+.KinhLup-1 {
+    display: none;
+}
 .logo-right > p {
     font-size: 16px;
-    margin: 30px;
+    margin: 30px 20px;
     color: #77777f;
 }
 .Get-free-trial {
@@ -589,6 +597,12 @@
     font-weight: 600;
     font-size: 18.5px;
     border: 1px solid #171321;
+}
+.Get-free-trial-1 {
+    display: none;
+}
+.gach-3-2 {
+    display: none;
 }
 .KinhLup:hover {
     cursor: pointer;
