--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -5,7 +5,6 @@ body {
 .container {
     display: flex;
     flex-flow: column wrap;
-    width: 100%;
     height: auto;
     position: relative;
 }
@@ -28,13 +27,11 @@ body {
     z-index: -1;
 }
 .body-0 {
-    width: 100%;
     height: 0px;
     margin-bottom: 30px;
 }
 .body-1 {
     display: block;
-    width: 100%;
     height: 600px;
     margin-bottom: 60px;
     overflow: hidden;
@@ -61,9 +58,13 @@ body {
     width: 25%;
     height: 70%;
     animation: div-move 1.2s linear 8s;
+    animation: name duration timing-function delay iteration-count direction fill-mode;
 }
 .div-1-child-1 h1 {
-    font-size: 50px;
+    font-size: 48px;
+    font-weight: 600;
+    letter-spacing: -1.8px;
+    line-height: 52px;
     margin: 0px 0px;
 }
 .div-1-child-1 p {
@@ -101,7 +102,7 @@ body {
     flex-flow: column wrap;
     width: 25%;
     padding: 25px 25px;
-    background-color: #f4effc;
+    background:linear-gradient(176deg,hsla(0,0%,100%,.75),hsla(0,0%,100%,.4));
     margin-top: 50px;
     margin-left: 60px;
     border-radius: 10px;
@@ -174,7 +175,7 @@ body {
     flex-flow: column wrap;
     width: 25%;
     padding: 25px 25px;
-    background-color: #f4effc;
+    background:linear-gradient(176deg,hsla(0,0%,100%,.75),hsla(0,0%,100%,.4));
     margin-left: 40px;
     margin-top: 50px;
     border-radius: 10px;
@@ -253,10 +254,14 @@ body {
     width: 12.5%;
     height: 100%;
 } 
-.body-2-div p {
+
+.Trusted-By-2 {
     font-size: 17.5px;
     color: #171321;
     padding-right: 20px;
+}
+.Trusted-By-1 {
+    display: none;
 }
 #body-2-logo-1{
     width: 90px;
@@ -273,7 +278,6 @@ body {
     height: 22px;
     padding-right: 100px;
     filter: grayscale(100%);
-
 }
 #body-2-logo-4{
     width: 190px;
