--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -5,6 +5,7 @@ body {
 .container {
     display: flex;
     flex-flow: column wrap;
+    width: 100%;
     height: auto;
     position: relative;
 }
@@ -34,15 +35,16 @@ body {
     display: block;
     height: 600px;
     margin-bottom: 60px;
+    width: 100%;
     overflow: hidden;
 }
 .body-1-div {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 1800px;
+    width: 100%;
     height: 100%;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 .div-1-child img {
     /* width: 430px;
