--- a/period-7/style.css/repo.css
+++ b/period-7/style.css/repo.css
@@ -243,11 +243,11 @@
     .body-3-text h3 {
         font-size: 35px;
         margin: 0px;
-        max-width: 350px;
+        max-width: 100%;
     }
     .body-3-text p {
         font-size: 20px;
-        max-width: 360px;
+        max-width: 85%;
     }
     .body-3-form {
         display: flex;
@@ -262,11 +262,12 @@
         flex-flow: row wrap;
         justify-content: center;
         align-items: center;
-        width: 350px;
+        width: 85%;
         height: 40px;
     }
     .body-3-link a {
-        margin: 10px 0px;
+        padding: 10px 0px;
+        box-sizing: border-box;
     }
     .body-4 {
         display: flex;
@@ -466,14 +467,14 @@
         background: linear-gradient( to right, #df9e76, #c894a5, #9573e7);
         background-clip: text;
         color: transparent;
-        width: 170px;
+        width: 40%;
         height: 35px;
         margin: 20px 0px 20px 20px;
     }
     .body-6-div-child .child-1 {
         font-size: 15px;
         font-weight: 600;
-        width: 120px;
+        width: 30%;
         text-align: center;
         height: 45px;
         border-style: none;
@@ -485,7 +486,7 @@
     .body-6-div-child .child-2 {
         font-size: 15px;
         font-weight: 600;
-        width: 120px;
+        width: 30%;
         text-align: center;
         height: 45px;
         border-style: none;
@@ -497,7 +498,7 @@
     .body-6-div-child .child-3 {
         font-size: 15px;
         font-weight: 600;
-        width: 120px;
+        width: 30%;
         text-align: center;
         height: 45px;
         border-style: none;
@@ -510,7 +511,8 @@
         font-size: 40px;
         color: white;
         width: 380px;
-        margin: 0px 0px 30px 20px;
+        padding: 0px 0px 30px 20px;
+        box-sizing: border-box;
     }
     .body-6-left {
         display: flex;
@@ -528,7 +530,7 @@
         box-sizing: border-box;
     }
     .body-6-left > p {
-        max-width: 400px;
+        max-width: 100%;
         font-size: 20px;
         color: white;
         /* padding: 0px 20px; */
@@ -541,8 +543,8 @@
         height: 380px;
     }
     .body-6-right img {
-        width: 390px;
-        height: 420px;
+        width: 95%;
+        height: 100%;
     }
     .body-6-list > li {
         display: flex;
@@ -550,7 +552,7 @@
         justify-content: space-around;
     }
     .body-6-a {
-        width: 350px;
+        width: 80%;
     }
     .body-6-a > a {
         text-decoration: none;
@@ -632,7 +634,7 @@
     .body-7-left-1 > h3 {
         font-size: 35px;
         margin: 10px 0px;
-        max-width: 380px;
+        max-width: 100%;
     }
     .body-7-left-1 h3 > a {
         font-size: 35px;
@@ -698,14 +700,14 @@
         margin: 0px;
         margin-left: 25px;
         font-size: 23px;
-        max-width: 80px;
+        max-width: 20%;
     }
     .body-7-div-child > p {
         margin: 0px;
         margin-left: 10px;
         font-weight: 600;
         font-size: 91%;
-        max-width: 250px;
+        max-width: 100%;
     }
     .body-7-left-1 {
         display: flex;
@@ -720,5 +722,169 @@
         align-items: center;
         height: 15%;
         width: 100%;
+    }
+    .body-8 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 1200px;
+        margin-bottom: 40px;
+    }
+    .body-8-div {
+        display: flex;
+        flex-flow: column wrap;
+        width: 100%;
+        height: 100%;
+    }
+    .body-8-head {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: start;
+        width: 100%;
+        height: 32%;
+    }
+    .body-8-head-left {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        width: 100%;
+        height: 35%;
+        padding: 20px 0px 0px 20px;
+        box-sizing: border-box;
+    }
+    .body-8-head-right {
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+        height: 40%;
+        padding: 20px 0px 0px 20px;
+        box-sizing: border-box;
+    }
+    .body-8-right-child-1 {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: start;
+        width: 50%;
+        height: 90%;
+    }
+    .body-8-right-child-2 {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: start;
+        width: 45%;
+        height: 90%;
+    }
+    .body-8-head-left h3 {
+        font-size: 250%;
+        width: 100%;
+        margin: 0px 0px;
+    }
+    .body-8-right-child-1 h3 {
+        font-size: 300%;
+        margin: 0px 0px;
+    }
+    .body-8-right-child-1 p {
+        font-size: 130%;
+        width: 100%;
+        padding: 0px 0px 0px 0px;
+        box-sizing: border-box;
+    }
+    .body-8-right-child-2 h3 {
+        font-size: 300%;
+        margin: 0px 0px;
+    }
+    .body-8-right-child-2 p {
+        font-size: 130%;
+        width: 100%;
+        padding: 0px 0px 0px 0px;
+        box-sizing: border-box;
+    }
+    
+    .body-8-footer {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: start;
+        width: 100%;
+        height: 68%;
+        margin-top: 0px;
+    }
+    .body-8-footer-left {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-between;
+        width: 100%;
+        height: 50%;
+    }
+    .body-8-footer-right {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-around;
+        width: 100%;
+        height: 50%;
+        padding-left: 20px;
+        background-color: white;
+        box-sizing: border-box;
+        border-radius: 0px 0px 50px 0px;
+    }
+    .body-8-footer-right h3 {
+        font-size: 30px;
+        width: 100%;
+        padding: 0px 0px;
+        margin: 0px 0px;
+        box-sizing: border-box;
+    }
+    .body-8-right-1 > img {
+        width: 25%;
+        height: 75%;
+        margin: 0px 0px;
+        padding: 0px 20px;
+        box-sizing: border-box;
+    }
+    .body-8-footer-left-child p {
+        font-size: 20px;
+        padding: 20px 0px;
+        margin: 0px 0px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+    .body-8-right-1 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 40%;
+        /* transform: translateY(40%); */
+    }
+    .body-8-right-2 {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: start;
+        height: 28%;
+        padding-left: 0px;
+        /* transform: translateY(-350%); */
+    }
+    .body-8-right-2 a {
+        text-decoration: none;
+        font-size: 150%;
+        width: 100%;
+        font-weight: 600;
+        color: black;
+    }
+    .right-arrow-8-right {
+        width: 8%;
+        height: 50%;
+        transition: 0.2s linear;
+    }
+    .body-8-right-div {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: start;
+        width: 100%;
+        height: 70%;
     }
 }
